fix untuk index
index fix

--- a/index.css
+++ b/index.css
@@ -35,10 +35,10 @@ input{
 }
 
 #login{ 
-    padding: 10px;
-    width: 20%;
+    padding: 5px;
+    width: 15%;
     max-width: 30%;
-    font-size: 18px;
+    font-size: 100%;
     border: 1px solid black;
     color: black;
     background-color: gray;
