--- a/User/User - Daftar Komik/userdaftarkomik.css
+++ b/User/User - Daftar Komik/userdaftarkomik.css
@@ -49,11 +49,123 @@ header p#tanggal{
 /*------------------------bagian artikel---------------------*/
 article{
     height: 80%;
+    width: 100%;
 }
-/*------------------------bagian aside---------------------*/
-article div#aside{
+/*------------------------bagian judul dan searching + sorting ---------------------*/
+article div#judul h1{  /*judul "Daftar Komik"*/
+    text-align: center;
+    font-size: 35px;
+    text-transform: uppercase;    
 }
-/*------------------------bagian konten---------------------*/
-article div#konten{
+article div#judul #sorting{ /*"sort by" (label dan dropbox-nya)*/
+    float: right;
+    margin-right: 1%;
+}
+article div#judul #sorting #selectSortBy{ /*"sort by" (dropbox-nya)*/
+    margin-left: 15px;
+    width: 100px;
+    background-color: rgba(255,255,255,0.54);
+    border: 0.05vw solid lightslategray;
+    border-radius: 20px;
+}
+article div#judul #searching{ /*"search by" (label, dropbox, input, dan icon-nya)*/
+    float: right;
+    width: 300px;
+    margin-right: 2%;
+}
+article div#judul #searching #searchBox{ /*"search by" (input, dan icon-nya)*/
+    float: right;
+}
+article div#judul #searching #searchBox #inputSearchBy{ /*"search by" (input-nya)*/
+    width: 150px;
+    background-color: rgba(255,255,255,0.54);
+    border: 0.05vw solid lightslategray;
+    border-radius: 20px;
+}
+article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
+    width: 100px;
+    margin-left: 3px;
+    margin-right: 10px;
+    background-color: rgba(255,255,255,0.54);
+    border: 0.05vw solid lightslategray;
+    border-radius: 20px;
+}
 
+/*------------------------bagian isi (daftar komiknya)---------------------*/
+article div#daftarKomik{ /*sekotak daftar komik*/
+    margin: auto;
+    height: 400px;
+    width: 91%;
+    overflow-y: scroll;  /*utk scroll*/
+}
+article #daftarKomik .infoKomik{ /*kotak masing2 komik yang isinya info komik*/
+    background-color: #F2F2F2;
+    margin: 14px;
+    height: 300px;
+    width: 170px;
+    float: left;
+}
+article #daftarKomik .infoKomik.favorit{ /*utk komik2 yang favorit*/
+    border: 4px solid red;
+    height: 292px;
+    width: 162px;
+    padding: 0px;
+}
+article #daftarKomik .infoKomik.specialEdition{ /*utk komik2 yang special edition*/
+    outline: 4px solid gold;
+}
+article #daftarKomik .infoKomik .komik{ /*utk fotonya*/
+    height: 200px;
+    width: inherit; /*selebar kotak putih*/
+}
+article #daftarKomik .infoKomik h4{ /*judul komiknya*/
+    margin: 4px;
+    text-align: center;
+}
+article #daftarKomik .infoKomik p{ /*info komiknya*/
+    margin: 0px;
+}
+article #daftarKomik .infoKomik p.tersedia{ /*tersedia berapa*/
+    float: left;
+}
+article #daftarKomik .infoKomik p.status{ /*available atau tidak*/
+    float: right;
+    color: green; /*available hijau, unavail red*/
+}
+article #daftarKomik .infoKomik .new{ /*tambahan img icon "new" utk komik2 baru*/
+    clear: both;
+    float: right;
+    width: 30px;
+}
+
+
+
+/*media query*/
+@media screen and (max-width: 680px){ /*view port kecil*/
+    header{ /*header height nya ditambahi, semua element di ketengahi*/
+        height: 180px;
+        text-align: center;
+    }
+    header #logo{
+        float: none;
+    }
+    header p#welcome, header p#tanggal{
+        float: none;
+    }
+
+    article{ /*semua element di article di ketengahi*/
+        text-align: center;   
+    }
+    article div#judul #sorting, article div#judul #searching{ /*media search dan sort diketengahi*/
+        margin: auto;
+        text-align: center;
+        float: none;
+        
+    }
+    article div#judul #searching #searchBox{
+        float: none;
+    }
+    article div#judul #searching #searchBox::before { /*menambahkan new line sebelum id="searchBox"*/
+        content: "\A";
+    }
 }
