--- a/Manager/Manager - Daftar Peminjaman/managerdaftarpeminjaman.css
+++ b/Manager/Manager - Daftar Peminjaman/managerdaftarpeminjaman.css
@@ -6,6 +6,7 @@ html {  /*untuk setting background dan font keseluruhan page*/
     background-size: cover;        /*setting background*/
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     height: 100%;
+    width: 100%;
 }
 body{ /*supaya mentok selayar*/
     margin: 0px;
@@ -117,31 +118,44 @@ article div#konten #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
     border-radius: 20px;
 }
 /*keperluan search------*/
+
 /*tabel daftar peminjaman------*/
-article div#konten div#tabel{
+article div#konten div#tabel{ /*div pembungkus tabel*/
     height: 65%;
     width: 95%;
-    overflow-y: scroll;  
-    margin: auto;
+    overflow-y: scroll;  /*scroll horizontal kalau overflow*/
+    margin: auto;   /*ketengahin*/
     margin-top: 100px;
     clear: both;
 }
-table{  
+table{  /*tabelnya*/
+    width: 100%;
     margin: auto;
     border-collapse: collapse;
 }
-th{
+th{ /*tabel baris paling atas*/
     background-color: grey;
     color: white;
 }
-th,td{
+th,td{ /*semua data didalam tabel*/
     text-align: center;
     border: 2px solid black; 
-    width: 350px;
 }
-.peringatan{
+td{
+    max-width: 0;
+    overflow: hidden;   /*jika data melebihi batas tabel, di hidden*/
+    text-overflow: ellipsis; /*supaya teks panjang berubah jadi ...*/
+    white-space: nowrap; /*supaya tidak di-newline*/
+}
+.tanggalPengembalian, .idMember{ /*kolom tanggal pengembalian dan id member*/
+    width:20%;
+}
+.namaMember{
+    width: 55%;
+}
+.peringatan{ /*kolom untuk menampilkan ! (yang sudah terlambat / denda)*/
     background-color: transparent;
-    width: 50px;
+    width: 5%;
     border: none;
 }
 /*tabel daftar peminjaman------*/
@@ -225,9 +239,16 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
     
     /*-----------------utk konten-----------------*/
     /*tabel daftar peminjaman------*/
-    article div#konten div#tabel{
-        overflow-y: unset;
+    article div#konten div#tabel{ /*div pembungkus tabel*/
+        overflow-y: unset;  /*tidak ada scroll lagi*/
         margin-top: 120px;
+    }
+    table{
+        font-size: 10px; /*tulisan dikecilkan*/
+    }
+    td{
+        text-overflow: ellipsis;    /*kalo kepanjangan jadi ...*/
+        white-space: pre-line;  /*bisa ada new line kalau data panjang dan ada spasinya*/
     }
     /*tabel daftar peminjaman------*/
     /*-----------------utk konten-----------------*/
