--- a/User/User - Detail Komik/userdetailkomik.css
+++ b/User/User - Detail Komik/userdetailkomik.css
@@ -26,6 +26,11 @@ header{ /*bagian atas yang isinya logo, tulisan welcome, logout dan tanggal*/
     height:20%;
     width: 100%;
 }
+header #tombolBack{ /*tombol utk kembali*/
+    float: left;
+    margin-top: 0.4%;
+    font-size: 50px;
+}
 header #logo{  /*penempatan gambar logo tepoz di kiri atas*/
     margin-top: 0%;
     padding-top: 0%;
@@ -112,6 +117,9 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
     header{ /*header height nya ditambahi, semua element di ketengahi*/
         height: 180px;
         text-align: center;
+    }
+    header #tombolBack{
+        font-size: 40px;
     }
     header #logo{ /*logo tepoz supaya bisa ikut ketengah*/
         float: none;
