--- a/User/User - Detail Komik/userdetailkomik.css
+++ b/User/User - Detail Komik/userdetailkomik.css
@@ -67,21 +67,34 @@ article div#gambarKomik{ /*div yang isinya gambar komik*/
     margin-right: 30px;
 }
 article div#gambarKomik img{ /*atur ukuran gambar komik*/
-    height: 295px;
+    height: 290px;
     margin-bottom: 10px;
-}
-article div#keteranganKomik{ /*dari ID buku sampai dipinjam*/
-    float: left; /*disebelahkan dg gambar komik*/
-}
-article div#keteranganKomik #statusKomik{ /*avail atau tidak*/
-    color: green; /*hijau utk avail, red utk unavail*/
 }
 article div#istimewa{ /*favorit dan special edition*/
     float: right; /*taruh sebelah kanan*/
     margin-right: 100px;
 }
+article div#sewa{
+    clear: right;
+    float: right;
+    margin-right: 30px;
+    padding: 0px 20px;
+    background-color: rgba(248,142,142,0.25);
+}
+article table#kiri{ /*dari ID buku sampai dipinjam*/
+    float: left; /*disebelahkan dg gambar komik*/
+    margin-top: -100px;
+}
+article div#keteranganKomik #statusKomik{ /*avail atau tidak*/
+    color: green; /*hijau utk avail, red utk unavail*/
+}
 article div#sinopsis{ /*bagian dinopsis*/
     clear: both; /*pindah ke baris baru*/
+}
+article table#kanan{ /*dari genre sampai rak*/
+    margin-left: 50px;
+    margin-top: 110px;
+    float: left;
 }
 article div#sinopsis h4{ /*tulisan "Sinopsis:"*/
     margin-bottom: 10px;
@@ -141,9 +154,15 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
         float: none;
         text-align: left;
     }
-    article div#keteranganKomik{    /*dari ID smpai DIPINJAM taruh tengah*/
+    article table#kiri, article table#kanan{    /*dari ID smpai rak taruh tengah*/
         float: none;
-        margin: auto;
+        margin: 0px;
+    }
+    article table#kanan{
+        width: 65%;
+    }
+    article table#kanan td{
+        width: 50%;
     }
     article div#sinopsis p#isiSinopsis{ /*yang versi smartphone, sinopsis tidak ada scroll box nya*/
         overflow-y: unset;
