--- a/Gudang/Gudang - Daftar Penerbit/gudang - daftar penerbit.css
+++ b/Gudang/Gudang - Daftar Penerbit/gudang - daftar penerbit.css
@@ -80,19 +80,6 @@ article{ /*article adlah semua yang ada dibawah header*/
     height: 80%;
     width: 100%;
 }
-/*------------------------bagian judul dan searching + sorting ---------------------*/
-article div#judul h1{  /*judul "Daftar Komik"*/
-    text-align: center; /*taruh tengah*/
-    font-size: 35px;
-    text-transform:uppercase;   /*supaya capslock*/
-}
-
-/*------------------------bagian artikel---------------------*/
-article{ /*article adlah semua yang ada dibawah header*/
-    height: 80%;
-    width: 100%;
-}
-/*------------------------bagian artikel---------------------*/
 
 /*------------------------bagian aside---------------------*/
 article div#aside{ /*aside*/
@@ -121,12 +108,80 @@ article div#aside div#minimizeOption{ /*minimize option*/
 }
 /*------------------------bagian aside---------------------*/
 
+/*------------------------bagian judul dan searching + sorting ---------------------*/
+article div#judul h1{  /*judul "Daftar Komik"*/
+    text-align: center; /*taruh tengah*/
+    font-size: 35px;
+    text-transform:uppercase;   /*supaya capslock*/
+}
+article div#judul #sorting{ /*"sort by" (label dan dropbox-nya)*/
+    float: right;   /*taruh pojok kanan*/
+    margin-right: 1%;   /*beri jarak dengan pojok*/
+}
+article div#judul #sorting #selectSortBy{ /*"sort by" (dropbox-nya)*/
+    margin-left: 15px;  /*supaya letak dropbox agak ke kanan dibanding labelnya*/
+    width: 100px;   /*lebar dropbox*/
+    background-color: rgba(255,255,255,0.54);
+    border: 0.05vw solid lightslategray;
+    border-radius: 20px;
+}
+article div#judul #searching{ /*"search by" (label, dropbox, input, dan icon-nya)*/
+    float: right;   /*letakkan di kanan, sebelahan dg sort by*/
+    width: 300px;
+    margin-right: 2%; /*jarak dgn sort by*/
+}
+article div#judul #searching #searchBox{ /*"search by" (input, dan icon-nya)*/
+    float: right;   /*lettakkan di kanan parent #searching*/
+}
+article div#judul #searching #searchBox #inputSearchBy{ /*"search by" (input-nya)*/
+    width: 150px;
+    background-color: rgba(255,255,255,0.54);
+    border: 0.05vw solid lightslategray;
+    border-radius: 20px;
+}
+article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
+    width: 100px;
+    margin-left: 3px;   /*memberi jarak ke kanan dengan label yg diatasnya*/
+    margin-right: 10px; /*memberi jarak dengan box inputan*/
+    background-color: rgba(255,255,255,0.54);
+    border: 0.05vw solid lightslategray;
+    border-radius: 20px;
+}
+
+/*------------------------bagian isi (daftar penerbitnya)---------------------*/
+article div#daftarPenerbit{ /*sekotak daftar penerbit*/
+    margin: auto;   /*ditaruh tengah*/
+    height: 400px;
+    width: 91%;
+    overflow-y: scroll;  /*apabila lebih overflow secara vertical, di scroll*/
+}
+article #daftarPenerbit .infoPenerbit{ /*kotak masing2 penerbit yang isinya info penerbit*/
+    background-color: #F2F2F2;
+    margin: 14px;
+    height: 300px;
+    width: 170px;
+    float: left; /*di taruh kiri, supaya bersebelahan dengan gambar2 lainnya*/
+}
+article #daftarPenerbit .infoPenerbit .penerbit{ /*utk fotonya*/
+    height: 200px;
+    width: inherit; /*selebar kotak putih*/
+}
+article #daftarPenerbit .infoPenerbit p{ /*info penerbitnya*/
+    margin: 1px; /*jarak 1px dg kotaknya*/
+}
+/*------------------------bagian artikel---------------------*/
+article{ /*article adlah semua yang ada dibawah header*/
+    height: 80%;
+    width: 100%;
+}
+/*------------------------bagian artikel---------------------*/
+
+
 /*------------------------bagian konten---------------------*/
 article div#konten{ /*konten (sebelahnya aside)*/
     float: left;
     width: 80%;
     height: 100%;
-    overflow-y: scroll;
 }
 article div#konten h1{  /*judul*/
     text-align: center; /*taruh tengah*/
@@ -134,60 +189,6 @@ article div#konten h1{  /*judul*/
     text-transform:uppercase;   /*supaya capslock*/
 }
 /*------------------------bagian konten---------------------*/
-
-/*------------------------bagian input---------------------*/
-article div#konten div#kiri{ /*yng sbelah kiri, dari id member smp tanggal lahir*/
-    float: left;
-    margin-top: 35px;
-    margin-left: 100px;
-
-}
-article div#konten div#kanan{ /*yg kanan, dari email smp alamat*/
-    float: left;
-    margin-top: 35px;
-    margin-left: 250px;
-}
-article div#konten label{   /*semua label taruh diatas inputan*/
-    font-size: 12px;
-    margin-left: 5px;
-}
-article div#konten input, article div#konten select{   /*kotak yang utk input*/
-    margin-bottom: 8px;
-    font-size: 12px;
-    padding: 8px;
-    width: 250px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
-    border-radius: 3px;
-}
-article div#konten textarea#sinopsis{
-    height: 200px;
-}
-article div#konten select{
-    width: 270px;
-}
-article div#konten input[type=text]:focus { /*warna background berubah ketika focus*/
-    background-color: cornflowerblue;
-}
-
-article div#konten input#tombol{
-    clear: both;
-    float: right;
-    margin-right: 20px;
-    margin-top: 15px;
-    padding: 5px;
-    width: 100px;
-    font-size: 15px;
-    border: 1px solid black;
-    color: black;
-    background-color: darkgray;
-    border-radius: 5px;
-}
-article div#konten input#tombol:hover{
-    background-color: gray;
-}
-
-/*------------------------bagian input---------------------*/
 
 /*----------tombol utk up ke atas----------*/
 a#tombolUp{ /*peletakkannya dikanan bawah dan fixed*/
