--- a/kasir/KasirDefault.css
+++ b/kasir/KasirDefault.css
@@ -94,6 +94,8 @@ article div#konten h1{  /*judul*/
     text-transform:uppercase;   /*supaya capslock*/
 }
 
+/*------------------------Bagian-Konten yang pasti sama aturannya-----------------*/
+
 /*------------------------bagian konten---------------------*/
 
 /*----------tombol utk up ke atas----------*/
