--- a/kasir/Kasir - peminjaman/Kasir - peminjaman.css
+++ b/kasir/Kasir - peminjaman/Kasir - peminjaman.css
@@ -18,7 +18,7 @@ table,tr,td,th{
     overflow: hidden;
     white-space: nowrap;
 }
-input{
+article div#konten input#print{
     font-size: 20px;
 }
 
