--- a/kasir/Kasir - daftar member/cssKasirDaftarMember.css
+++ b/kasir/Kasir - daftar member/cssKasirDaftarMember.css
@@ -75,3 +75,22 @@ td{
     width: 20%;
 }
 /*tabel daftar peminjaman------*/
+
+/*pop up message*/
+div#blur{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.4);
+    display: none;
+}
+div#popup{
+    position: absolute;
+    top: 5%;
+    height: 90%;
+    width: 70%;
+    background-color: rgba(255, 255, 255, 1);
+    display: none;
+}
